# TextEditor

./: CMakeLists.txt
app/: CMakeLists.txt  kilo.cpp
